
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct sockaddr_in {int sin_addr; int sin_port; int sin_family; } ;
struct sockaddr {int dummy; } ;
struct hostent {int h_length; int h_addr; } ;
typedef int addr ;


 int AF_INET ;
 int SOCK_STREAM ;
 int bcopy (int ,int *,int ) ;
 int connect (int,struct sockaddr*,int) ;
 int exit (int) ;
 struct hostent* gethostbyname (char*) ;
 int htons (int) ;
 int perror (char*) ;
 int socket (int ,int ,int ) ;

int connect_to_host(char *hs,int port)
{
        int sock,x;
        struct sockaddr_in addr;
 struct hostent *host;

 if(!(host = gethostbyname(hs))) {
  perror("gethostbyname(): while resolving host");
  exit(1);
 }


        addr.sin_family = AF_INET;
        addr.sin_port = htons(port);
 bcopy(host->h_addr,&addr.sin_addr,host->h_length);

        if((sock = socket(AF_INET, SOCK_STREAM, 0))<0) {
                perror("socket() error");
                return(-1);
        }

        if((x = connect(sock, (struct sockaddr *)&addr, sizeof(addr)))<0) {
                perror("connect() error");
                return(-1);
        }

        return sock;
}
